Fix - added alt to image created when modal is opened, removes arrow text when modal is closed so they only appear when modal is opened. style - changed color for contrast

--- a/assets/style.css
+++ b/assets/style.css
@@ -119,7 +119,7 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #877f3b;
+	background-color: #545231;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
